--- a/src/main/resources/static/templates/universitySettingsBlock.html
+++ b/src/main/resources/static/templates/universitySettingsBlock.html
@@ -125,43 +125,43 @@
         <tr class="lesson-tr">
             <td>1</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid1" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position1" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>2</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid2" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position2" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>3</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid3" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position3" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>4</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid4" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position4" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>5</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid5" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position5" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>6</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid6" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position6" type="text">
             </td>
         </tr>
         <tr class="lesson-tr">
             <td>7</td>
             <td>
-                <input class="lesson-input" ng-model="lessonGrid7" type="text">
+                <input class="lesson-input" ng-model="uniData.lessonGridPosition.position7" type="text">
             </td>
         </tr>
         <script>
