--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
 <script src="lib/angular/angular-route.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
-<script src="js/index-controller.js"></script>
+<script src="js/login.js"></script>
 <script src="js/filters.js"></script>
 <script src="js/directives.js"></script>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
